--- a/fastai/courses/dl1/hwd.ipynb
+++ b/fastai/courses/dl1/hwd.ipynb
@@ -45,6 +45,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "import os\n",
+    "\n",
+    "def list_files(startpath):\n",
+    "    for root, dirs, files in os.walk(startpath):\n",
+    "        level = root.replace(startpath, '').count(os.sep)\n",
+    "        indent = ' ' * 4 * (level)\n",
+    "        print('{}{}/'.format(indent, os.path.basename(root)))\n",
+    "        subindent = ' ' * 4 * (level + 1)\n",
+    "        #for f in files:\n",
+    "            #print('{}{}'.format(subindent, f))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/\n",
+      "test/\n",
+      ".ipynb_checkpoints/\n",
+      "valid/\n",
+      "    6/\n",
+      "    9/\n",
+      "    7/\n",
+      "    1/\n",
+      "    5/\n",
+      "    4/\n",
+      "    0/\n",
+      "    2/\n",
+      "    8/\n",
+      "    3/\n",
+      "train/\n",
+      "    6/\n",
+      "    .ipynb_checkpoints/\n",
+      "    9/\n",
+      "    7/\n",
+      "    1/\n",
+      "    5/\n",
+      "    4/\n",
+      "    0/\n",
+      "    2/\n",
+      "    8/\n",
+      "    3/\n",
+      "models/\n",
+      "tmp/\n",
+      "    x_act_test_resnet34_0_224.bc/\n",
+      "        meta/\n",
+      "        data/\n",
+      "    x_act_val_resnet34_0_224.bc/\n",
+      "        meta/\n",
+      "        data/\n",
+      "    x_act_resnet34_0_224.bc/\n",
+      "        meta/\n",
+      "        data/\n"
+     ]
+    }
+   ],
+   "source": [
+    "PATH = \"data/hwd/\"\n",
+    "list_files(PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data = ImageClassifierData.from_paths(PATH, tfms=tfms_from_model(arch, sz))"
    ]
   },
